# tz_cars

./: .env.example  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  services.py
config/: settings.py  urls.py
delivery/: admin.py  models.py  serializers.py  urls.py  views.py
delivery/migrations/: 0001_initial.py
users/: admin.py
users/management/commands/: cau.py  cuu.py
users/migrations/: 0001_initial.py
